--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -14,12 +14,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -964,6 +958,218 @@
     "\n",
     "**Answer:** Keep in mind that 1 is the high-risk loans and 0 is low risk loans. The model outperforms on determining low-risk loans. Precision is 100% demonstrating that every prediction made was accurate.  The recall of .99 demonstrates that the model identifies 99% of all low-risk loans.  An F1 score is also th harmonic mean of the recall and precision giving a single-pont descriptor to the accuracy of the model. Low-risk loans in this example have a perfect F1 score.  Of note, and a probable reason behind the better low-risk modeling is demonstrated by the support for low-risk loans. This shows the total number of instances that are being evaluated for this class.  Intuitively we know that the more instances, the less each single instance can skew the model and the more accurate the model is likely to be. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ADDITIONAL 1 - SMOTE Resampling "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original training label distribution:\n",
+      "loan_status\n",
+      "0    52472\n",
+      "1     1803\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Resampled training label distribution with SMOTE:\n",
+      "loan_status\n",
+      "0    52472\n",
+      "1    52472\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#SMOTE Synthetic Minority Oversampling Tecnique -- class weighting\n",
+    "\n",
+    "# Import necessary libraries\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "# Split the dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# Apply SMOTE to the training data\n",
+    "smote = SMOTE(random_state=42)\n",
+    "X_train_smote, y_train_smote = smote.fit_resample(X_train, y_train)\n",
+    "\n",
+    "# Check the distribution of the new training labels\n",
+    "print(\"Original training label distribution:\")\n",
+    "print(y_train.value_counts())\n",
+    "\n",
+    "print(\"\\nResampled training label distribution with SMOTE:\")\n",
+    "print(y_train_smote.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.99      1.00     22564\n",
+      "           1       0.85      1.00      0.92       697\n",
+      "\n",
+      "    accuracy                           0.99     23261\n",
+      "   macro avg       0.92      1.00      0.96     23261\n",
+      "weighted avg       1.00      0.99      0.99     23261\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[22441   123]\n",
+      " [    3   694]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize the Logistic Regression model\n",
+    "model = LogisticRegression(random_state=42)\n",
+    "\n",
+    "# Train the model using the SMOTE resampled data\n",
+    "model.fit(X_train_smote, y_train_smote)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model performance\n",
+    "print(\"Classification Report:\")\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(confusion_matrix(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ADDITIONAL 2 - Cross-Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation scores: [0.99382773 0.99106403 0.99023491 0.99180101 0.99207738]\n",
+      "Mean cross-validation score: 0.9918010133578996\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Perform cross-validation on the original data without --\n",
+    "\n",
+    "# this shows how consistent the sampling is across different subsets of data.  \n",
+    "cv_scores = cross_val_score(model, X_train, y_train, cv=5, scoring='accuracy')\n",
+    "\n",
+    "print(\"Cross-validation scores:\", cv_scores)\n",
+    "print(\"Mean cross-validation score:\", cv_scores.mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HYPERPARAMETER TUNING -GRID SEARCH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Parameters: {'C': 0.01, 'class_weight': 'balanced'}\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.99      1.00     22564\n",
+      "           1       0.85      1.00      0.92       697\n",
+      "\n",
+      "    accuracy                           0.99     23261\n",
+      "   macro avg       0.92      1.00      0.96     23261\n",
+      "weighted avg       1.00      0.99      0.99     23261\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[22441   123]\n",
+      " [    3   694]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import necessary libraries\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
+    "# Initialize the Logistic Regression model\n",
+    "model = LogisticRegression(random_state=42, max_iter=10000)\n",
+    "\n",
+    "# Define the parameter grid\n",
+    "param_grid = {\n",
+    "    'C': [0.01, 0.1, 1, 10, 100],  # Regularization strength\n",
+    "    'class_weight': [None, 'balanced']  # Class weight handling\n",
+    "}\n",
+    "\n",
+    "# Initialize GridSearchCV\n",
+    "grid_search = GridSearchCV(estimator=model, param_grid=param_grid, cv=5, scoring='accuracy', n_jobs=-1)\n",
+    "\n",
+    "# Fit the model using grid search\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "# Get the best model parameters\n",
+    "print(\"Best Parameters:\", grid_search.best_params_)\n",
+    "\n",
+    "# Use the best estimator to make predictions\n",
+    "best_model = grid_search.best_estimator_\n",
+    "y_pred = best_model.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model performance\n",
+    "print(\"Classification Report:\")\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(confusion_matrix(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
